examples/test/testpolicy5782.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy5782
  namespace: namespace477
spec:
  podSelector:
    matchLabels:
      key17: value36
      key8: value36
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key12: value13
          key20: value19
          key27: value25
      podSelector:
        matchLabels:
          key32: value8
          key0: value3
          key35: value35
